--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="type_rent">Rent</string>
     <string name="type_sale">Sale</string>
     <string name="display_type">For %s</string>
+    <string name="display_price_rental">$%,.0f</string>
     <string name="display_price_monthly_rental">$%,.0f/month</string>
     <string name="display_price">$%,.0f</string>
 </resources>
