--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,9 @@
   -->
 
 <resources>
-    <string name="app_name">Real Estate on Mars</string>
-    <string name="show_all">Show all</string>
+    <string name="app_name">Mars</string>
+    <string name="about">About</string>
+    <string name="show_all">All sites</string>
     <string name="show_rent">Rent</string>
     <string name="show_buy">Buy</string>
     <string name="type_rent">Rent</string>
@@ -26,4 +27,7 @@
     <string name="display_price_rental">$%,.0f</string>
     <string name="display_price_monthly_rental">$%,.0f/month</string>
     <string name="display_price">$%,.0f</string>
+    <string name="call_us">Call us</string>
+    <string name="tab_rent">For rent</string>
+    <string name="tab_sale">For sale</string>
 </resources>
