--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,8 @@
   -->
 
 <resources>
-    <string name="app_name">Mars Realty</string>
+    <string name="app_name">Mars</string>
+    <string name="app_title">Mars Realty</string>
     <string name="about">About</string>
     <string name="show_all">All sites</string>
     <string name="show_rent">Rent</string>
