UI & Project optimizations

--- a/app/src/main/res/values-land/strings.xml
+++ b/app/src/main/res/values-land/strings.xml
@@ -15,11 +15,12 @@
   ~
   -->
 
-<resources>
-    <string name="app_description" formatted="false">
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="app_description" formatted="false" tools:ignore="TypographyDashes">
         <![CDATA[
-            Made by taking <a href="https://www.udacity.com/course/developing-android-apps-with-kotlin--ud9012">Udacity course</a>.
-            App <a href="https://github.com/maxeema/andfun-kotlin-mars-real-estate/tree/work">GitHub page</a>.
+            Made by taking <a href="https://www.udacity.com/course/developing-android-apps-with-kotlin--ud9012">Udacity course</a>
+            |
+            App <a href="https://github.com/maxeema/andfun-kotlin-mars-real-estate/tree/work">GitHub page</a>
         ]]>
     </string>
 </resources>
