--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,11 +15,21 @@
   ~
   -->
 
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Mars Realty</string>
+    <string name="app_name_bold" formatted="false">
+        <![CDATA[
+            <font color="%s"><b>Mars</b></font> <font color="%s">Realty</font>
+        ]]>
+    </string>
+    <string name="app_subname_bold" formatted="false">
+        <![CDATA[
+            <font color="%s"><b>RED</b> Planet</font> best deals
+        ]]>
+    </string>
     <string name="app_title">Mars</string>
     <string name="app_author">© Maxeem America, 2019</string>
-    <string name="app_description" formatted="false">
+    <string name="app_description" formatted="false" tools:ignore="TypographyDashes">
         <![CDATA[
             Made by taking <a href="https://www.udacity.com/course/developing-android-apps-with-kotlin--ud9012">Udacity course</a>
             <br/><br/>
@@ -40,7 +50,7 @@
     <string name="type_sale">Sale</string>
     <string name="display_type">For %s</string>
     <string name="display_price_rental">$%,.0f</string>
-    <string name="display_price_monthly_rental"><![CDATA[$%,.0f / <small>month</small>]]></string>
+    <string name="display_price_monthly_rental"><![CDATA[$%,.0f <small><font color="%s">/ month</font></small>]]></string>
     <string name="display_price">$%,.0f</string>
     <string name="loading">Loading…</string>
     <string name="no_connection">No connection. Tap to retry.</string>
